syntax = "proto3";

option go_package = ".;proto";

package proto;

service ProductService {
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc GetProductByID(GetProductByIDRequest) returns (GetProductByIDResponse);
}

message GetProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string category = 3;
}

message GetProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetProductByIDRequest {
  string id = 1;
}

message GetProductByIDResponse {
  Product product = 1;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string category = 5;
  string created_at = 6;
}